src/style.css
html, body { 
    min-height: 100%; 
    margin: 0; padding: 0; 
}

html { 
    position: relative; 
    font-size: 14px; 
}

body, .game, .game-play, .game-score { 
    width: 100%;
    position: absolute; left: 0; top: 0; 
}

.game, .game-play { 
    height: 100%;
}

.game-start { 
    padding: 1.5em 2.5em; 
    position: absolute; left: 50%; top: 50%; transform: translate( -50%, -50% );
    z-index: 2; 
    background-color: white; 
    font-size: 1.8rem; font-weight: bold; 
    color: red; 
    text-align: center; text-transform: uppercase;
    cursor: pointer; 

}

.game-play { 
    z-index: 1; 
    background-color: red;
    overflow: hidden; 
}

.game-score { 
    box-sizing: border-box; 
    padding: 0.75em; 
    background-color: white;
    color: red; 
    font-size: 1.75rem; font-weight: bold; 
    text-align: center; 

}

.wizard, .fire-ball, .cloud, .bug { 
    position: absolute; 
}

.wizard { 
    width: 82px; height: 100px; 
    left: 100px; bottom: 100px; 
    background-image: url( './images/wizard.png' ); 
    background-size: cover; 
    background-color: blue; 
    overflow: hidden; 
}

.wizard-firing { 
    background-image: url( './images/wizard-fire.png' );
}

.fire-ball { 
    width: 40px; height: 40px; 
    background-image: url( './images/fire-ball.png' ); 
}

.cloud { 
    width: 200px; height: 200px;  
    background-image: url( './images/cloud.png' ); 
}

.bug { 
    width: 60px; height: 60px; 
    background-image: url( './images/bug.png' ); 
}

/* Class to give to an element to remove it from the screen */
.hidden { 
    display: none; 
}

